--- a/css/styles.css
+++ b/css/styles.css
@@ -3,48 +3,40 @@
     margin: 0;
     padding: 0;
 }
+#ruleta {
+    width: 200px;
+    height: 200px;
+    background-color: black;
+    border-radius: 50%;
+    margin: 20px auto;
+    position: relative;
+    transform: rotate(30deg);
+    overflow: hidden;
+}
 
+.separacion {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    transform-origin: bottom;
+}
+
+.rojo {
+    background-color: red;
+    transform: rotate(60deg);
+}
+
+.negro {
+    background-color: black;
+    transform: rotate(0deg);
+}
+
+#mensaje {
+    text-align: center;
+    font-size: 24px;
+    margin-top: 20px;
+}
 body{
-    background-color: rgb(159, 161, 235);
-}
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(64, 102, 168);
-    max-width: 700px;
-    max-height: 500px;
-    margin: 0 auto;
-    margin-top: 10px;
-    border: solid rgba(0, 0, 0, 0.532) 2px;
-    border-radius: 15px;
-}
-p{
-    padding: 6px;
-}
-.imagen{
-    width: 250px;
-    height: 280px;
-    border-radius: 15px;
-    border: solid rgb(0, 0, 0) 2px;
-}
-.subtitulo{
-    margin: 8px;
+background-image: linear-gradient(150deg, #fd1616 0%, #3b5fe3 50%, #be3434 100%);
 
-}
-.contenedorProducto{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(85, 107, 214);
-    width: 500px;
-    border-radius: 15px;
-    border: solid black 2px;
-    margin-left: 50px;
-    margin-top: 70px;
-    
-}
-.contenedorProductos{
-    display: flex;
-    justify-content: center;
 }
