--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
 }
+
 #ruleta {
     width: 200px;
     height: 200px;
@@ -13,7 +14,62 @@
     transform: rotate(30deg);
     overflow: hidden;
 }
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+  }
 
+  .container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+
+  input[type="text"],input[type="number"] {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+  }
+
+  .expiry-cvv {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .expiry-cvv input {
+    width: calc(50% - 5px);
+  }
+
+  .ingresoDinero{
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #45a049;
+  }
 .separacion {
     width: 100%;
     height: 100px;
@@ -36,10 +92,13 @@
     font-size: 24px;
     margin-top: 20px;
 }
-
+ 
 body{
 background-image: linear-gradient(150deg, #fd1616 0%, #3b5fe3 50%, #be3434 100%);
 
+}
+.body{
+    background-image: linear-gradient(150deg, #fd1616 0%, #3b5fe3 50%, #be3434 100%);   
 }
 .title{
     display: flex;
@@ -68,6 +127,7 @@ a{
 
 
 }
+
 .option{
     background-image: linear-gradient(150deg, #fd1616 0%, #3b5fe3 50%, #be3434 100%);
     border-radius: 4px;
@@ -85,4 +145,28 @@ a{
     border-radius: 6px;
     
 }
+.cards{
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+.cards .card{
+    width: 250px;
+    height: 300px;
+    margin-top: 40px;
+    background-color: #000000;
+    color: white;
+    
+}
+.cards .card:hover{
+    background-color: rgb(55, 51, 51);
+    transition: 0.3s;
+    transform: scale(1.1);
+}
+.stats{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
